# devprune

./: .gitignore  Cargo.toml  README.md  install.sh
crates/devprune/: Cargo.toml
crates/devprune-core/: Cargo.toml
crates/devprune-core/src/: config.rs  constants.rs  error.rs  lib.rs  types.rs
crates/devprune-core/src/rules/: catalog.rs  mod.rs  parser.rs  types.rs
crates/devprune-core/src/scanner/: filter.rs  mod.rs  walker.rs
crates/devprune-core/src/trash/: metadata.rs  mod.rs  storage.rs
crates/devprune-core/tests/: integration.rs
crates/devprune/src/: cli.rs  main.rs
crates/devprune/src/tui/: app.rs  event.rs  input.rs  mod.rs
crates/devprune/src/tui/ui/: details.rs  dialog.rs  mod.rs  status_bar.rs  theme.rs  tree.rs
crates/devprune/tests/: cli_integration.rs
docs/superpowers/plans/: 2026-03-22-devprune-implementation.md
docs/superpowers/specs/: 2026-03-22-devprune-design.md
