[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
devprune-core = { path = "crates/devprune-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
bytesize = "2"
dirs = "6"
log = "0.4"
ignore = "0.4"
rayon = "1"
tempfile = "3"
glob-match = "0.2"
hostname = "0.4"
