[package]
name = "devprune-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
bytesize = { workspace = true }
dirs = { workspace = true }
log = { workspace = true }
ignore = { workspace = true }
rayon = { workspace = true }
glob-match = { workspace = true }
hostname = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
