[package]
name = "devprune"
version.workspace = true
edition.workspace = true
repository = "https://github.com/kavehtehrani/devprune"

[[bin]]
name = "devprune"
path = "src/main.rs"

[dependencies]
devprune-core = { workspace = true }
ratatui = "0.30"
crossterm = "0.29"
clap = { version = "4", features = ["derive"] }
log = { workspace = true }
env_logger = "0.11"
serde_json = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
bytesize = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
anyhow = "1"

[dev-dependencies]
tempfile = { workspace = true }
